--- a/empjdbservetapp/.settings/org.eclipse.wst.common.component
+++ b/empjdbservetapp/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="userwishapp">
+    <wb-module deploy-name="empjdbservetapp">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="userwishapp"/>
-        <property name="java-output-path" value="/userwishapp/build/classes"/>
+        <property name="context-root" value="empjdbservetapp"/>
+        <property name="java-output-path" value="/empjdbservetapp/build/classes"/>
     </wb-module>
 </project-modules>
